updated resume and experience

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               target="_blank" class="social__link click">
               <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="./assets/Andreas Antoniades [cv]  .pdf" target="_blank" class="social__link click">
+            <a href="./assets/Andreas Antoniades [Professional]  (pdf.pdf" target="_blank" class="social__link click">
               <i class="far fa-file-pdf"></i>
             </a>
           </div>
@@ -96,7 +96,7 @@
             <h3 class="modal__title modal__title--about">Here is more about me.</h3>
             <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Enginner.</h4>
             <p class="modal__para">
-                I am currently engaged in a <b class="green"> paid internship at Mojo Design</b>, where I am gaining invaluable hands-on experience in the field of frontend development. 
+                I am currently employed <b class="green"> as a Contractor at Mojo Design</b>, where I am gaining invaluable hands-on experience in the field of frontend development. 
                 This opportunity allows me to apply my knowledge and skills in a professional setting, collaborate with experienced professionals, and contribute to  <b class="green">real-world projects.</b> 
             <br>
             With a strong foundation in <b class="green">HTML, CSS, JavaScript, React, Typescript</b> and <b class="green">WordPress</b>, I bring a fresh perspective and a hunger for continuous learning to every project I tackle. 
