--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             link__hover-effect--white">
             Contact
             </a>
-            <a href="./assets/Andreas Antoniades [cv]  .pdf"  target="_blank" class="footer__social--link
+            <a href="./assets/Andreas Antoniades [Professional]  (pdf.pdf"  target="_blank" class="footer__social--link
             link__hover-effect
             link__hover-effect--white">
             Resume
