new project added

--- a/index.html
+++ b/index.html
@@ -214,6 +214,33 @@
             <li class="project">
                 <div class="project__wrapper">
                   <img
+                    src="./assets/work3.png"
+                    class="project__image"
+                    alt=""/>
+                    <div class="project__wrapper--background"></div>
+                  <div class="project__description">
+                    <h3 class="project__description--title">NFT Marketplace</h3>
+                    <h4 class="project__description--sub-title"
+                      React, JavaScript, HTML, CSS
+                    </h4>
+                    <p class="project__description--para">
+                      The NFT Marketplace is a dynamic and user-centric platform designed for exploring and purchasing unique digital assets. 
+                      Users can browse a diverse collection of NFTs, view item details, and enjoy a seamless interface optimized for performance. The site integrates a custom loading Skeleton component for a smooth user experience, showcasing detailed NFT data fetched dynamically based on item IDs in the URL path. This project not only highlights modern React features and efficient state management but also emphasizes responsive design, 
+                      making it accessible across all devices.
+                    </p>
+                    <div class="project__description--links">
+                      <a href= "https://github.com/Antrikas/andreas-Internship" class="project__description--link">
+                          <i class="fab fa-github"></i>
+                          <a href="https://nft-marketplace-andreas-project.vercel.app/" class="project__description--link">
+                              <i class="fas fa-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="project">
+                <div class="project__wrapper">
+                  <img
                     src="./assets/work2.png"
                     class="project__image"
                     alt=""/>
