--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
                 </div>
               </div>
             </li>
-
             <li class="project">
                 <div class="project__wrapper">
                   <img
@@ -220,7 +219,7 @@
                     <div class="project__wrapper--background"></div>
                   <div class="project__description">
                     <h3 class="project__description--title">NFT Marketplace</h3>
-                    <h4 class="project__description--sub-title"
+                    <h4 class="project__description--sub-title"></h4>
                       React, JavaScript, HTML, CSS
                     </h4>
                     <p class="project__description--para">
