nft description update

--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
                       React, JavaScript, HTML, CSS
                     </h4>
                     <p class="project__description--para">
-                      The NFT Marketplace is a dynamic and user-centric platform designed for exploring and purchasing unique digital assets. 
-                      Users can browse a diverse collection of NFTs, view item details, and enjoy a seamless interface optimized for performance. The site integrates a custom loading Skeleton component for a smooth user experience, showcasing detailed NFT data fetched dynamically based on item IDs in the URL path. This project not only highlights modern React features and efficient state management but also emphasizes responsive design, 
-                      making it accessible across all devices.
+                      This NFT Marketplace project showcases the integration of multiple libraries and APIs to deliver a robust, seamless user experience. 
+                      It features custom animations during loading for a smooth, visually engaging transition, while detailed NFT data is fetched dynamically based on item IDs in the URL path. 
+                      Utilizing modern React features and efficient state management, the site is fully responsive and accessible across all devices. 
+                      The project emphasizes advanced error handling, responsive design practices, and performance optimization, demonstrating technical proficiency in frontend development and external service integration.
                     </p>
                     <div class="project__description--links">
                       <a href= "https://github.com/Antrikas/andreas-Internship" class="project__description--link">
