library project description

--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
                       HTML, CSS, JavaScript, React
                     </h4>
                     <p class="project__description--para">
-                        This website is an e-commerce platform for purchasing books, 
-                        offering search features by ratings and publication dates to 
-                        help users find the perfect read.
+                      For my online Library project, I used React for a responsive, component-driven structure, integrating React Router for smooth navigation and Fetch API to handle data requests. 
+                      I implemented custom CSS modules to achieve modular and maintainable styling, making the app fully responsive. 
+                      State management was handled through React’s Context API, ensuring effective data flow across components. 
+                      This project showcases essential frontend skills in modern library integration, responsive design, and efficient state management.
                     </p>
                     <div class="project__description--links">
                       <a href="https://github.com/Antrikas/Library-react-app" class="project__description--link">
