--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                       React, JavaScript, HTML, CSS
                     </h4>
                     <p class="project__description--para">
-                      This NFT Marketplace project showcases the integration of multiple libraries and APIs to deliver a robust, seamless user experience. 
-                      It features custom animations during loading for a smooth, visually engaging transition, while detailed NFT data is fetched dynamically based on item IDs in the URL path. 
-                      Utilizing modern React features and efficient state management, the site is fully responsive and accessible across all devices. 
-                      The project emphasizes advanced error handling, responsive design practices, and performance optimization, demonstrating technical proficiency in frontend development and external service integration.
+                      In my NFT Marketplace project, I used React for an interactive and modular interface, with React Router enabling dynamic page loading based on NFT IDs in the URL. 
+                      Custom animations enhance the user experience during loading states, while efficient state management ensures smooth data flow. 
+                      The project incorporates multiple libraries and APIs to fetch and display NFT data in real-time, emphasizing responsive design for full accessibility across devices. 
+                      This project demonstrates advanced frontend skills, API integration, and modern React practices.
                     </p>
                     <div class="project__description--links">
                       <a href= "https://github.com/Antrikas/andreas-Internship" class="project__description--link">
