--- a/index.html
+++ b/index.html
@@ -194,11 +194,10 @@
                     HTML, CSS, JavaScript, React, Typescript
                   </h4>
                   <p class="project__description--para">
-                    A user-friendly platform for organizing tasks and planning daily schedules. 
-                        It provides tools for managing events through a drag-and-drop calendar system 
-                        and supports day, week, and month views for easy planning. 
-                        The site emphasizes its secure, free-to-use interface designed for power users, 
-                        aiming to streamline daily productivity.
+                    The Time Box project primarily uses TypeScript, which strengthens type safety and helps prevent runtime errors. 
+                    It incorporates Tailwind CSS for responsive styling, enhancing the app’s visual consistency and ease of maintenance. 
+                    Task management and timing functionalities are implemented with React hooks, with the entire app structured for modular, reusable code. 
+                    It alos integrates Firebase for data storage and real-time updates, alongside Cypress for end-to-end testing, ensuring both reliable backend support and comprehensive test coverage for user interactions..
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/WilliamGiammona/time-box" class="project__description--link">
