--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     The Time Box project primarily uses TypeScript, which strengthens type safety and helps prevent runtime errors. 
                     It incorporates Tailwind CSS for responsive styling, enhancing the app’s visual consistency and ease of maintenance. 
                     Task management and timing functionalities are implemented with React hooks, with the entire app structured for modular, reusable code. 
-                    It also integrates Firebase for data storage and real-time updates, alongside Cypress for end-to-end testing, ensuring both reliable backend support and comprehensive test coverage for user interactions..
+                    It also integrates Firebase for data storage and real-time updates, alongside Cypress for end-to-end testing, ensuring both reliable backend support and comprehensive test coverage for user interactions.
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/WilliamGiammona/time-box" class="project__description--link">
